# libtcod-rougelike

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  vcpkg.json
.cache/clangd/index/: main.cpp.CD527F592C856FA5.idx
.github/workflows/: cmake.yml
src/: combat.hpp  errors.hpp  fov.hpp  globals.hpp  input_tools.hpp  item_tools.hpp  main.cpp  rendering.hpp  world_init.hpp  world_logic.hpp
src/actions/: ai_basic.hpp  ai_confused.hpp  bump.hpp  pickup.hpp  use_item.hpp  use_stairs.hpp
src/items/: health_potion.hpp  scroll_confusion.hpp  scroll_fireball.hpp  scroll_lightning.hpp
src/pathfinding/: astar.hpp  dijkstra.hpp  map.hpp
src/procgen/: caves.hpp
src/states/: dead.hpp  ingame.hpp  levelup.hpp  main_menu.cpp  menu.hpp  pick_inventory.hpp  pick_tile.hpp  pick_tile_aoe.hpp
src/types/: action.hpp  action_result.hpp  actor.hpp  actor_id.hpp  item.hpp  map.hpp  map_id.hpp  messages.hpp  position.hpp  state.hpp  stats.hpp  world.hpp
